# bevy-demo

./: AGENTS.md  Cargo.toml  README.md  Taskfile.yml
.agents/skills/bevy-api/: SKILL.md
.agents/skills/bevy-examples/: SKILL.md
.agents/skills/bevy-patterns/: SKILL.md
.opencode/skills/bevy-migration/: SKILL.md
assets/shaders/: mandala.wgsl
docs/rationale/: 0000_bevy_patterns.md  0001_bloom.md  0002_bouncing.md  0003_clock.md  0004_cubic.md  0005_firefly.md  0006_flocking.md  0007_followings.md  0008_gravity.md  0009_life.md  0010_mandala.md  0011_menu.md  0012_orbit.md  0012_particles.md  0014_pong.md  0015_rope.md  0016_sprites.md
src/: lib.rs
