[package]
name = "bevy-demo"
version = "0.2.2"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.18.0"
rand = "0.9.2"


[[bin]]
name = "bouncing"
path = "src/bin/bouncing.rs"

[[bin]]
name = "firefly"
path = "src/bin/firefly.rs"

[[bin]]
name = "followings"
path = "src/bin/followings.rs"

