[package]
name = "bevy-demo"
version = "0.3.1"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
# Enable window offset for local development (offsets window 20px to the right)
window-offset = []
# Enable transparent window background to see desktop wallpaper
transparent = []

[dependencies]
bevy = "0.18.0"
rand = "0.9.2"


[[bin]]
name = "bouncing"
path = "src/bin/bouncing.rs"

[[bin]]
name = "firefly"
path = "src/bin/firefly.rs"

[[bin]]
name = "flocking"
path = "src/bin/flocking.rs"

[[bin]]
name = "followings"
path = "src/bin/followings.rs"

[[bin]]
name = "gravity"
path = "src/bin/gravity.rs"

[[bin]]
name = "particles"
path = "src/bin/particles.rs"

[[bin]]
name = "pong"
path = "src/bin/pong.rs"

[[bin]]
name = "sprites"
path = "src/bin/sprites.rs"

