[package]
name = "bevy-demo"
version = "0.4.2"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
# Enable window offset for local development (offsets window 20px to the right)
window-offset = []
# Enable transparent window background to see desktop wallpaper
transparent = []

[dependencies]
bevy = "0.18.1"
jiff = "0.2.23"
rand = "0.9.2"


[[bin]]
name = "bouncing"
path = "src/bin/bouncing.rs"

[[bin]]
name = "cubic"
path = "src/bin/cubic.rs"

[[bin]]
name = "firefly"
path = "src/bin/firefly.rs"

[[bin]]
name = "flocking"
path = "src/bin/flocking.rs"

[[bin]]
name = "followings"
path = "src/bin/followings.rs"

[[bin]]
name = "gravity"
path = "src/bin/gravity.rs"

[[bin]]
name = "particles"
path = "src/bin/particles.rs"

[[bin]]
name = "pong"
path = "src/bin/pong.rs"

[[bin]]
name = "sprites"
path = "src/bin/sprites.rs"

[[bin]]
name = "bloom"
path = "src/bin/bloom.rs"

[[bin]]
name = "clock"
path = "src/bin/clock.rs"

[[bin]]
name = "life"
path = "src/bin/life.rs"

[[bin]]
name = "menu"
path = "src/bin/menu.rs"

[[bin]]
name = "orbit"
path = "src/bin/orbit.rs"

[[bin]]
name = "rope"
path = "src/bin/rope.rs"

[[bin]]
name = "mandala"
path = "src/bin/mandala.rs"

